# ha-saxo-portfolio

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  SECURITY.md  activate_dev.sh  hacs.json  pyproject.toml  pytest.ini  requirements.txt  trend_helper_example.yaml
.github/workflows/: hacs.yml  hassfest.yml  quality.yml  tests.yml
custom_components/saxo_portfolio/: __init__.py  application_credentials.py  button.py  config_flow.py  const.py  coordinator.py  diagnostics.py  icons.json  manifest.json  models.py  sensor.py  services.yaml  strings.json
custom_components/saxo_portfolio/api/: __init__.py  saxo_client.py
custom_components/saxo_portfolio/translations/: da.json  de.json  en.json  es.json  fi.json  fr.json  it.json  nb.json  nl.json  pt.json  sv.json
specs/001-create-a-homeassistant/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-create-a-homeassistant/contracts/: home_assistant_integration_contract.yaml  saxo_api_contract.yaml
tests/: conftest.py  test_structure.py
tests/contract/: test_config_flow_contract.py  test_coordinator_contract.py  test_saxo_accounts_contract.py  test_saxo_balance_contract.py  test_saxo_positions_contract.py  test_sensor_contract.py
tests/integration/: test_data_refresh.py  test_error_handling.py  test_oauth_flow.py  test_position_sensors.py  test_sensor_creation.py  test_sticky_availability.py
tests/unit/: __init__.py  test_button.py  test_config_flow.py  test_coordinator.py  test_diagnostics.py  test_init.py  test_models.py  test_position_sensors.py  test_saxo_client.py  test_sensor_coverage.py  test_token_refresh.py
